Introduce tests for ck8s-cli